Refactor entity method calls to use new accessors
- Updated method calls in various integration tests to use the new accessor methods (e.g., `getId()` to `id()`, `getRoles()` to `roles()`, etc.) for consistency and improved readability.
- Ensured that all relevant tests across the submission, task, and user repositories reflect these changes.